--- a/notebooks/Fase 2/01_Definicao_Problema_e_Hiperparametros.ipynb
+++ b/notebooks/Fase 2/01_Definicao_Problema_e_Hiperparametros.ipynb
@@ -1,5 +1,25 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "8e0b225b",
+   "metadata": {},
+   "source": [
+    "## Introdução - Fase 2\n",
+    "\n",
+    "### O objetivo deste projeto é apoiar o diagnóstico de diabetes mellitus a partir de dados clínicos estruturados, utilizando modelos de aprendizado de máquina supervisionado.\n",
+    "### Na Fase 1, diferentes algoritmos de classificação foram avaliados, e a Regressão Logística apresentou o melhor equilíbrio entre:\n",
+    "\n",
+    "#### - desempenho (especialmente recall da classe positiva),\n",
+    "#### - simplicidade\n",
+    "#### - interpretabilidade — fator essencial no contexto médico.\n",
+    "\n",
+    "### Nesta fase, o foco passa a ser a otimização dos hiperparâmetros desse modelo por meio de Algoritmos Genéticos (GA).\n",
+    "\n",
+    "#### A discussão teórica detalhada encontra-se no relatório técnico (PDF)."
+   ]
+  }
+ ],
  "metadata": {
   "language_info": {
    "name": "python"
