--- a/notebooks/Fase 2/01_Definicao_Problema_e_Hiperparametros.ipynb
+++ b/notebooks/Fase 2/01_Definicao_Problema_e_Hiperparametros.ipynb
@@ -5,24 +5,142 @@
    "id": "8e0b225b",
    "metadata": {},
    "source": [
-    "## Introdução - Fase 2\n",
+    "# Projeto 1 — Otimização de Modelos de Diagnóstico\n",
     "\n",
-    "### O objetivo deste projeto é apoiar o diagnóstico de diabetes mellitus a partir de dados clínicos estruturados, utilizando modelos de aprendizado de máquina supervisionado.\n",
-    "### Na Fase 1, diferentes algoritmos de classificação foram avaliados, e a Regressão Logística apresentou o melhor equilíbrio entre:\n",
+    "## Introdução\n",
     "\n",
-    "#### - desempenho (especialmente recall da classe positiva),\n",
-    "#### - simplicidade\n",
-    "#### - interpretabilidade — fator essencial no contexto médico.\n",
+    "Na Fase 1 foram avaliados diferentes modelos de machine learning para\n",
+    "classificação diagnóstica. Com base nas métricas de desempenho e na\n",
+    "interpretabilidade clínica, a Regressão Logística foi selecionada como\n",
+    "modelo base.\n",
     "\n",
-    "### Nesta fase, o foco passa a ser a otimização dos hiperparâmetros desse modelo por meio de Algoritmos Genéticos (GA).\n",
+    "Nesta fase, o objetivo é otimizar os hiperparâmetros do modelo selecionado\n",
+    "utilizando Algoritmos Genéticos (GA), buscando melhorar métricas como\n",
+    "Recall e F1-score, essenciais no contexto médico.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04f4eb62",
+   "metadata": {},
+   "source": [
+    "## Modelo Selecionado: Regressão Logística\n",
     "\n",
-    "#### A discussão teórica detalhada encontra-se no relatório técnico (PDF)."
+    "**Logistic Regression** foi escolhida como modelo final devido ao maior *recall* (0.70) para a classe de pacientes diabéticos, garantindo melhor detecção de casos positivos — o que é fundamental em contextos médicos, onde falsos negativos podem representar risco à saúde do paciente.  \n",
+    "\n",
+    "\n",
+    "O foco desta fase não é substituir o modelo, mas **otimizar sua configuração**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22228ec1",
+   "metadata": {},
+   "source": [
+    "## Hiperparâmetros da Regressão Logística\n",
+    "\n",
+    "A implementação da Regressão Logística no scikit-learn possui diversos hiperparâmetros configuráveis de acordo com a [documentação oficial do scikit-learn](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html).\n",
+    "Abaixo estão os hiperparâmetros disponíveis:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1533fa23",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'C': 1.0,\n",
+       " 'class_weight': None,\n",
+       " 'dual': False,\n",
+       " 'fit_intercept': True,\n",
+       " 'intercept_scaling': 1,\n",
+       " 'l1_ratio': None,\n",
+       " 'max_iter': 100,\n",
+       " 'multi_class': 'deprecated',\n",
+       " 'n_jobs': None,\n",
+       " 'penalty': 'l2',\n",
+       " 'random_state': None,\n",
+       " 'solver': 'lbfgs',\n",
+       " 'tol': 0.0001,\n",
+       " 'verbose': 0,\n",
+       " 'warm_start': False}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "LogisticRegression().get_params()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03cb65f8",
+   "metadata": {},
+   "source": [
+    "## Hiperparâmetros Selecionados para Otimização\n",
+    "\n",
+    "Nem todos os hiperparâmetros serão otimizados via GA.\n",
+    "Foram selecionados aqueles com maior impacto no desempenho e\n",
+    "relevância clínica:\n",
+    "\n",
+    "### Parâmetros escolhidos\n",
+    "|Parâmetro|Tipo|Motivo|\n",
+    "|---|---|---|\n",
+    "|C|Contínuo|Controla a força da regularização|\n",
+    "|penalty|Categórico|Define o tipo de regularização|\n",
+    "|solver|Categórico|Afeta convergência e estabilidade|\n",
+    "|max_iter|Discreto|Controla o processo de otimização|\n",
+    "\n",
+    "O hiperparâmetro `solver` será fixado para garantir compatibilidade\n",
+    "com os demais parâmetros e reduzir o espaço de busca."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1199969d",
+   "metadata": {},
+   "source": [
+    "## Espaço de Busca dos Hiperparâmetros\n",
+    "\n",
+    "O espaço de busca define os valores possíveis que cada gene poderá assumir no Algoritmo Genético.\n",
+    "\n",
+    "| Parâmetro     | Tipo      | Espaço de Busca                          |\n",
+    "|---------------|-----------|------------------------------------------|\n",
+    "| C             | Contínuo  | [0.001, 10]                              |\n",
+    "| penalty       | Categórico| ['l1', 'l2']                             |\n",
+    "| class_weight  | Categórico| [None, 'balanced']                      |\n",
+    "| max_iter      | Discreto  | [100, 500]                              |\n",
+    "\n",
+    "**Observação:** algumas combinações de `solver` e `penalty` não são válidas no scikit-learn.\n",
+    "Essas restrições serão tratadas na etapa de avaliação da fitness."
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
