Implementação do GA

--- a/notebooks/Fase 1/EDA.ipynb
+++ b/notebooks/Fase 1/EDA.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "251da61c",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6159616a",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
     }
    ],
    "source": [
-    "dataset = pd.read_csv(\"../dados/Raw/diabetes.csv\")\n",
+    "dataset = pd.read_csv(\"B:/Pós/hospital-ai-diagnosis/dados/Raw/diabetes.csv\")\n",
     "\n",
     "print(\"Dimensões do dataset:\", dataset.shape)"
    ]
