--- a/notebooks/Fase 1/Modelagem.ipynb
+++ b/notebooks/Fase 1/Modelagem.ipynb
@@ -10,10 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "8c9d6e39",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "b:\\Pós\\hospital-ai-diagnosis\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -57,12 +66,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "1b4d6c7d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = pd.read_csv(\"../dados/processados/processado_diabetes.csv\")\n",
+    "dataset = pd.read_csv(\"B:/Pós/hospital-ai-diagnosis/dados/processados/processado_diabetes.csv\")\n",
     "\n",
     "\n",
     "\n",
