--- a/notebooks/Fase 1/PreProcessamento.ipynb
+++ b/notebooks/Fase 1/PreProcessamento.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "sns.set_theme(style=\"whitegrid\")\n",
     "\n",
-    "dataset = pd.read_csv(\"../dados/Raw/diabetes.csv\")"
+    "dataset = pd.read_csv(\"B:/Pós/hospital-ai-diagnosis/dados/Raw/diabetes.csv\")"
    ]
   },
   {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "21d11561",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "60b43aaa",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "3f15cd6a",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
    ],
    "source": [
     "fig, axes = plt.subplots(1, 2, figsize=(10,4))\n",
-    "axes[0].hist(pd.read_csv(\"../dados/Raw/diabetes.csv\")[\"Glucose\"], bins=20)\n",
+    "axes[0].hist(pd.read_csv(\"B:/Pós/hospital-ai-diagnosis/dados/Raw/diabetes.csv\")[\"Glucose\"], bins=20)\n",
     "axes[0].set_title(\"Glucose - Original (com zeros)\")\n",
     "axes[1].hist(dataset[\"Glucose\"].dropna(), bins=20, color='orange')\n",
     "axes[1].set_title(\"Glucose - Após trocar zeros por NaN\")\n",
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "f87302dd",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "ee318a71",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "737294eb",
    "metadata": {},
    "outputs": [],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "98abbf56",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "id": "cb89848a",
    "metadata": {},
    "outputs": [],
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "id": "38a69c97",
    "metadata": {},
    "outputs": [
@@ -314,7 +314,7 @@
     }
    ],
    "source": [
-    "final_dataset.to_csv('../dados/processados/processado_diabetes.csv', index=False)\n",
+    "final_dataset.to_csv('B:/Pós/hospital-ai-diagnosis/dados/processados/processado_diabetes.csv', index=False)\n",
     "\n",
     "print(\"✅ Pré-processamento concluído!\")\n",
     "print(\"📁 Arquivo salvo como: diabetes_preprocessed.csv\")\n",
