--- a/notebooks/Fase 1/Modelagem.ipynb
+++ b/notebooks/Fase 1/Modelagem.ipynb
@@ -10,25 +10,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "8c9d6e39",
+   "execution_count": 2,
+   "id": "747570cd",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b:\\Pós\\hospital-ai-diagnosis\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "2.3.0\n",
+      "b:\\Pós\\hospital-ai-diagnosis\\.venv\\Lib\\site-packages\\numpy\\__init__.py\n"
      ]
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "print(np.__version__)\n",
+    "print(np.__file__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8c9d6e39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import shap as sh\n",
     "import numpy as np\n",
+    "import shap as sh\n",
     "from sklearn.model_selection import train_test_split\n",
     "from imblearn.over_sampling import SMOTE\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -496,7 +508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
