--- a/notebooks/Fase 2/Projeto 1/Integracao_LLM.ipynb
+++ b/notebooks/Fase 2/Projeto 1/Integracao_LLM.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "910b5fe6",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "36a412ed",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2461278f",
    "metadata": {},
    "outputs": [],
@@ -139,10 +139,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "34c88b50",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Azure OpenAI configurado. Usando LLM real.\n"
+     ]
+    }
+   ],
    "source": [
     "load_dotenv()\n",
     "\n",
@@ -174,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5cb1938f",
    "metadata": {},
    "outputs": [],
@@ -223,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ad596875",
    "metadata": {},
    "outputs": [],
@@ -262,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "479300af",
    "metadata": {},
    "outputs": [],
@@ -306,10 +314,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ab773d8c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A otimização de hiperparâmetros realizada pelo Algoritmo Genético modificou significativamente o desempenho da Regressão Logística, especialmente no Recall, que passou de 0,70 para 0,79. O foco da otimização foi aumentar o Recall, refletindo uma maior capacidade do modelo em identificar corretamente indivíduos com diabetes. Isso ocorreu às custas de uma leve queda nas métricas de F1 (de 0,65 para 0,64) e na acurácia (de 0,73 para 0,68), indicando que a busca por Recall máximo pode sacrificar o equilíbrio geral entre sensibilidade e precisão, além da proporção de acertos totais.\n",
+      "\n",
+      "O uso de class_weight='balanced' tem papel relevante no contexto de saúde. Essa configuração ajusta automaticamente o peso das classes de acordo com sua frequência no conjunto de dados, compensando eventuais desequilíbrios entre pessoas com e sem diabetes. Em problemas médicos, onde a detecção de casos positivos é crucial, tal abordagem contribui para que o modelo não negligencie pacientes realmente afetados pela condição, priorizando a identificação dos positivos mesmo que sejam minoria.\n",
+      "\n",
+      "O aumento do Recall indica uma redução nos falsos negativos: mais casos de diabetes presentes no dataset são corretamente identificados pelo modelo otimizado. Na prática, isso significa maior garantia de que indivíduos com diabetes não passem despercebidos pela ferramenta, característica muito desejável em aplicações médicas de triagem, onde perder casos positivos pode trazer consequências indesejadas para o cuidado ao paciente.\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = build_prompt(\n",
     "    metrics,\n",
@@ -326,6 +346,22 @@
    "id": "488be20e",
    "metadata": {},
    "source": [
+    "### Exemplo de prompt gerado pelo LLM\n",
+    "#### Interpretação do modelo pelo LLM   \n",
+    "A otimização feita com o Algoritmo Genético teve como principal objetivo aumentar o \"Recall\" do modelo, que é uma métrica importante para identificar corretamente pessoas que têm diabetes.   \n",
+    "O recall mais alto significa que o modelo conseguiu reconhecer mais casos positivos (quem realmente tem diabetes), reduzindo as chances de “falsos negativos” — pessoas que têm a doença, mas o modelo não identificou.  \n",
+    "Mesmo que outras métricas, como a precisão geral e a F1, tenham diminuído um pouco, a prioridade foi garantir que menos casos reais fossem perdidos.  \n",
+    "\n",
+    "O uso do parâmetro \"class_weight\" configurado como \"balanced\" foi fundamental nesse processo.  \n",
+    "Isso ajudou o modelo a prestar mais atenção aos casos menos frequentes, ou seja, à minoria que tem diabetes, equilibrando o valor de cada grupo durante o treinamento.  \n",
+    "Isso é importante porque, muitas vezes, há muito mais pessoas sem diabetes do que com, e o modelo poderia aprender a “ignorar” os positivos.  \n",
+    "Definindo esse equilíbrio, o modelo dá a mesma importância para identificar quem tem e quem não tem a condição.  \n",
+    "  \n",
+    "Em resumo, após otimizar o modelo pelo Algoritmo Genético, ele ficou mais sensível para não deixar passar pessoas que realmente têm diabetes, aumentando a segurança na triagem e análise.  \n",
+    "Entretanto, isso pode levar a mais \"falsos positivos\" (casos em que o modelo indica diabetes quando não há), mas garante que menos pessoas com a condição fiquem sem o devido encaminhamento para investigação.  \n",
+    "\n",
+    "---\n",
+    "\n",
     "### Avaliação Qualitativa das Interpretações\n",
     "\n",
     "A avaliação da qualidade das interpretações geradas foi realizada de forma qualitativa, considerando os seguintes critérios:\n",
