--- a/notebooks/Fase 2/Projeto 1/Implementacao_GA.ipynb
+++ b/notebooks/Fase 2/Projeto 1/Implementacao_GA.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f076d5c2",
    "metadata": {},
    "outputs": [
@@ -80,6 +80,7 @@
     "import random\n",
     "import joblib\n",
     "import json\n",
+    "import os\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -364,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "348e61c0",
    "metadata": {},
    "outputs": [
@@ -401,6 +402,7 @@
     "plt.ylabel(\"Melhor F1-score\")\n",
     "plt.title(\"Convergência do Algoritmo Genético\")\n",
     "plt.legend()\n",
+    "plt.savefig(os.path.join(RESULTS_PATH, \"comparacao_baseline_ga.png\"))\n",
     "plt.show()"
    ]
   },
